# 2DShallowWater

./: .gitignore  CMakeLists.txt  Comm.cpp  Comm.h  README.md  ShallowWater.cpp  ShallowWater.h  draft  draft.cpp  draft_MPI.cpp  draft_MPI_v2.cpp  main  main.cpp  output.txt
Final_Version/: CMakeLists.txt  ShallowWater.cpp  readme.md
MPI/: ShallowWater_MPI.cpp  ShallowWater_MPI.h  draft_MPI_v3.cpp  draft_MPI_v4.cpp  main_MPI.cpp
ParallelSolver/: Comm.cpp  Comm.h  ShallowWater.cpp  ShallowWater.h
Profiling/test.1.er/: data.frameinfo  log.xml  map.xml  overview  profile
Profiling/test.10.er/: dyntext  overview
Profiling/test.2.er/: data.frameinfo  dyntext  log.xml  overview  profile
Profiling/test.3.er/: data.frameinfo  dyntext  overview  profile
Profiling/test.4.er/: map.xml  overview  profile
Profiling/test.5.er/: map.xml  overview
Profiling/test.6.er/: data.frameinfo  dyntext  log.xml  map.xml  profile
Profiling/test.7.er/: data.frameinfo  log.xml  profile
Profiling/test.8.er/: data.frameinfo
Profiling/test.9.er/: dyntext  log.xml  overview  profile
SerialSolver/: output.txt  serial  serial.cpp
test.1.er/: dyntext
test.1.er/archives/: main_Au3fMPV85Vf
test.10.er/: data.frameinfo  log.xml  map.xml  profile
test.10.er/_f1.er/: map.xml
test.10.er/_x1.er/: data.frameinfo  dyntext
test.10.er/archives/: mca_bfrops_v21.so_dU1net7nSj5  mca_iof_tool.so_1fcNkoDIWK0  mca_ptl_client.so_dU1net7nSj5  mca_rmaps_rank_file.so_1fcNkoDIWK0  mca_rmaps_round_robin.so_1fcNkoDIWK0  mca_schizo_ompi.so_1fcNkoDIWK0  mca_shmem_mmap.so_1fcNkoDIWK0  mca_state_app.so_1fcNkoDIWK0  mca_state_novm.so_1fcNkoDIWK0
test.2.er/: map.xml
test.3.er/: log.xml  map.xml
test.3.er/_f1.er/: map.xml
test.3.er/_f1_x1.er/: dyntext  map.xml
test.3.er/archives/: main_Au3fMPV85Vf  mca_allocator_basic.so_1fcNkoDIWK0  mca_op_avx.so_1fcNkoDIWK0  mca_plm_rsh.so_1fcNkoDIWK0  mca_ptl_server.so_dU1net7nSj5  mca_vprotocol_pessimist.so_1fcNkoDIWK0
test.4.er/: data.frameinfo  dyntext  log.xml
test.5.er/: data.frameinfo  dyntext  log.xml  profile
test.6.er/: overview
test.7.er/: dyntext  map.xml  overview
test.8.er/: dyntext  log.xml  map.xml  overview  profile
test.9.er/: data.frameinfo  map.xml
(+323 files in other folders)
